...
    <!--******************************************************************************-->
    <!-- ============================ MESSAGES ============================== -->
    <string name="no_incidencia_to_show">No hay incidencias que mostrar</string>
    <string name="incidencia_not_registered">Intenta nuevamente registrar la incidencia.</string>
    <string name="incidencia_wrong_init">Verifica que sigue abierta la incidencia.
    </string>
    <string name="resolucion_duplicada">Ya existe resolución para esta incidencia</string>
    <string name="user_without_powers">Haz login y accede nuevamente a la incidencia.</string>
    <!-- ====================== Google Cloud Messages ====================== -->
    <string name="incid_id_notification_channel">INCIDENCIAS</string>
    <string name="incid_desc_notification_channel">Dídekin: incidencias comunidad</string>
    <string name="incid_gcm_nueva_incidencia_body">Nueva incidencia en tu comunidad.</string>
    <string name="incid_gcm_incidencia_closed_body">Incidencia resuelta en tu comunidad.</string>
...
    <string name="incid_resolucion_plan_rot">Plan:</string>
    <string name="incid_resolucion_avance_hint">-- avance o cambio en el plan --</string>
    <string name="incid_resolucion_avances_rot">Historial de avances:</string>
    <string name="incid_resolucion_no_avances_message">No hay avances registrados</string>
    <!-- ======== IncidResolucionRegFr ========= -->
    <string name="incid_resolution_ac_label">Resolución incidencia</string>
    <string name="incid_resolucion_descrip_msg">Descripción</string>
    <string name="incid_resolucion_fecha_prev">Fecha estimada:</string>
    <string name="incid_resolucion_fecha_prev_msg">Fecha resolución</string>
    <string name="incid_resolucion_fecha_default_txt">>> Elige una fecha</string>
    <string name="incid_resolucion_hint">-- plan para resolver la incidencia --</string>
    <string name="incid_resolucion_reg_ac_button_rot">Registrar resolución</string>
    <string name="incid_resolucion_rot">Datos resolución</string>
    <string name="incid_resolucion_coste_prev_rot">Coste estimado EUR:</string>
    <string name="incid_resolucion_coste_prev_hint">-- tu estimación --</string>
    <string name="incid_resolucion_coste_prev_msg">Coste estimado</string>
    <!-- ===================== IncidSeeByComuAc ===================== -->
    <string name="incid_see_by_user_ac_label">Tus incidencias</string>
    <string name="incid_apertura_rot">Apertura:</string>
    <string name="incid_cierre_rot">Cierre:</string>
    <string name="incid_importancia_user_rot">Importancia:</string>
    <string name="incid_importancia_comunidad_rot">Importancia en la comunidad:</string>
...
    <!-- .......... RegUserComuFr ....... -->
    <string name="reg_usercomu_vivienda_rot">Tu vivienda</string>
    <string name="reg_usercomu_portal_hint">-- Portal --</string>
    <string name="reg_usercomu_escalera_hint">-- Escalera --</string>
    <string name="reg_usercomu_planta_hint">-- Planta --</string>
    <string name="reg_usercomu_puerta_hint">-- Puerta --</string>
    <string name="reg_usercomu_portal_rot">Portal</string>
    <string name="reg_usercomu_escalera_rot">Escalera</string>
    <string name="reg_usercomu_planta_rot">Planta</string>
    <string name="reg_usercomu_puerta_rot">Puerta</string>
    <string name="reg_usercomu_role_checkbox_rot">Vínculo</string>
    <string name="reg_usercomu_ac_button_rot">Adhiérete a la comunidad</string>
    <!--para mensaje de error validación y rótulos de campos  -->
    <string name="reg_usercomu_checkbox_pre_rot">Presidente</string>
    <string name="reg_usercomu_checbox_admin_rot">Administrador</string>
    <string name="reg_usercomu_checbox_pro_rot">Propietario</string>
    <string name="reg_usercomu_checbox_inq_rot">Arrendatario</string>
    <string name="reg_usercomu_role_rot">Vínculo con la comunidad</string>
    <!-- .......... RegComuFr ........... -->
    <string name="municipio_spinner">municipio</string>
    <string name="municipio">Municipio</string>
    <string name="tipo_via">Tipo vía</string>
    <string name="tipo_via_spinner">tipo de vía </string>
    <string name="nombre_via">Nombre de la vía</string>
...
